--- a/_posts/2015-09-01-branding.textile
+++ b/_posts/2015-09-01-branding.textile
@@ -10,7 +10,7 @@ p(meta). 01 Sep 2015
 
 We need a better model for thinking about branding.
 
-Most of the branding advice on the internet and in print is presented as a collection of barely related laws losely based on historical examples. Empirically, this isn't very useful in practice. A hundred contradicting laws of branding are difficult to remember and difficult to apply. They don't present a coherent model of the world, are next to impossible to internalize, and carry little actionable advice.
+Most branding advice on the internet and in print is presented as a collection of barely related laws losely based on historical examples. Empirically, this isn't very useful in practice. A hundred contradicting laws of branding are difficult to remember and difficult to apply. They don't present a coherent model of the world, are next to impossible to internalize, and carry little actionable advice.
 
 
 
@@ -29,6 +29,10 @@ foo
 h2. Introducing a new axis
 
 foo
+
+h2. The hook
+
+One issue to kick things off
 
 h2. Market resonance
 
