--- a/_posts/2015-09-01-startup-positioning.textile
+++ b/_posts/2015-09-01-startup-positioning.textile
@@ -10,7 +10,11 @@ p(meta). 01 Sep 2015
 
 If you're learning how to position your startup, you're going to run into two types of resources, both useless.
 
-The first type is books like "The 22 Immutable Laws of Marketing":http://www.amazon.com/The-22-Immutable-Laws-Marketing/dp/0887306667 and "Purple Cow":http://www.amazon.com/Purple-Cow-Transform-Business-Remarkable/dp/159184021X. These books exploit a bug in human psychology that makes us interested in lists and insights, and sell for the same reason that people click on Buzzfeed articles. You feel like you're learning while you're reading them, but after you're done you forget most of the content, and are left with no actionable insights.
+The first type is books like "The 22 Immutable Laws of Marketing":http://www.amazon.com/The-22-Immutable-Laws-Marketing/dp/0887306667 and "Purple Cow":http://www.amazon.com/Purple-Cow-Transform-Business-Remarkable/dp/159184021X. These books exploit a bug in human psychology that makes us interested in lists and insights. They sell for the same reason that people click on Buzzfeed articles. You feel like you're learning a lot while you're reading them, but after you're done you forget most of the content, and are left with no actionable insights.
+
+The second type is traditional books about the "marketing mix":https://en.wikipedia.org/wiki/Marketing_mix. These books are designed to educate college students in such a way that they can be marginally effective when they're eventually plugged into entry level jobs at large marketing organizations. This content will go you a reasonably good idea about how large marketing campaigns are planned and executed, but it's so far removed from the needs of startups that it's nearly impossible to translate into specific lessons on how to position your startup.
+
+
 
 h2. The three axis model
 
