--- a/_posts/2015-09-01-startup-positioning.textile
+++ b/_posts/2015-09-01-startup-positioning.textile
@@ -14,7 +14,7 @@ The first type is books like "The 22 Immutable Laws of Marketing":http://www.ama
 
 The second type is traditional books about the "marketing mix":https://en.wikipedia.org/wiki/Marketing_mix. These books are designed to educate college students in such a way that they can be marginally effective when they're eventually plugged into entry level jobs at large marketing organizations. These books will give you a reasonably good idea about how large marketing campaigns are planned and executed, but the material is so far removed from the needs of startups that it's nearly impossible to translate into specific lessons on startup positioning.
 
-While running "RethinkDB":http://www.rethinkdb.com over the past few years, by trial and error I've arrived at a systematic model that helps me think about startup positioning. I'll illustrate the model by drawing on examples from the 2016 U.S. presidential election. In politics, candidate positioning *is* the product which helps eliminate confounding factors when thinking about the problem of positioning. Additionally, the 2016 election has especially good examples of proper positioning.
+While running "RethinkDB":http://www.rethinkdb.com over the past few years, by trial and error I've arrived at a systematic model that helps me think about positioning. I'll illustrate the model by drawing on examples from the 2016 U.S. presidential election. I picked the presidential election because in politics candidate positioning _is_ the product, which helps eliminate confounding factors when thinking about the problem of positioning. Additionally, the 2016 election is fresh in everyone's mind so it's easy to reason about, and it has especially good examples of well thought out positioning strategy.
 
 h2. The three axis model
 
