--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -20,7 +20,7 @@ h2. Purpose
 
 <h2 style="margin-left: -8px;"><br />Relationships<br /><br /></h2>
 
-# Find the strength to let go of people who make you unhappy. Every minute spent trying to fix relationships that couldn't work is a minute robbed from the people who could love and accept you as you are.
+#_ Find the strength to let go of people who make you unhappy. Every minute spent trying to fix relationships that couldn't work is a minute robbed from the people who could love and accept you as you are.
 # Give the people who make you happy unconditional kindness and support. Every minute they choose to spend with you they're giving you a gift, not granting you your due. Be grateful and cultivate the discipline to express your gratitude in your every action.
 # Every human being has an inalienable birthright to their own story. Let go of your expectations for other people and don't ever try to coerce anyone to be a particular way. You can only start building meaningful relationships when you accept people exactly as they are.
 # Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box of your own creation.
@@ -28,7 +28,7 @@ h2. Purpose
 
 <h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
 
-# Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning. Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. When you pierce through the arrogance and the noise we may be unique, but we're still animals.# Time is limited. Simplify your life. Don't treat abstractions as reality.
+#_ Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning. Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. When you pierce through the arrogance and the noise we may be unique, but we're still animals.# Time is limited. Simplify your life. Don't treat abstractions as reality.
 # Don't measure out your life in coffee spoons. Do things with people.
 # Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
 # Nothing explains humanity like the games we play.
@@ -36,7 +36,7 @@ h2. Purpose
 
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
 
-# Cultivate respect for competence. No U.S. president was an idiot.
+#_ Cultivate respect for competence. No U.S. president was an idiot.
 # Let go of opinions, they're probably wrong. Don't make up your mind unless you have to. Use data.
 # Large groups of people are probability distributions. Don't anthropomorphize them.
 # Finding an important problem is 50% of the battle.
@@ -46,5 +46,5 @@ h2. Purpose
 
 <h2 style="margin-left: -8px;"><br />Learning<br /><br /></h2>
 
-# Put in the effort to understand Shakespeare. He posed most of the questions worth asking, and found the only answers we're ever going to get.
+#_ Put in the effort to understand Shakespeare. He posed most of the questions worth asking, and found the only answers we're ever going to get.
 
