--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -29,9 +29,9 @@ h2. Purpose
 
 #_ Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box of your own creation.
 # Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning.
-# Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. We may be unique, but when you pierce through the arrogance and the noise we're still animals.
-# Time is limited so clear your mind of cant. Simplify your life. Don't treat abstractions as reality.
-# Don't measure out your life in coffee spoons. Do things with people.
+# Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. We may be unique, but when you pierce through the arrogance and the noise, we're still animals.
+# Time is limited so clear your mind of cant. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics. Focus on what's in front of you.
+# Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
 # Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
 # Play a lot, laugh a lot, and help the people around you play and laugh. We're dancing animals.
 # Nothing explains humanity like the games we play. We can't help it, so learn to forgive yourself and others.
