--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -14,17 +14,16 @@ h2. Purpose
 <br />
 
 # My grandmother is ninety two. First her world shrunk to her room, then to her bed, then to one side of the bed. Then she forgot the names of her loved ones. Then she stopped recognizing our faces. We accumulate nothing and we die alone.
-# So make your life count. Most things here aren't worth fearing. You don't need to be anything, and you don't need to tally your life using anyone else's scoring system. Be deliberate about the responsibilities you assume. Have the courage to betray your idols.
+# So make your life count. Most things aren't worth fearing. You don't need to be anything, and you don't need to tally your life using anyone else's scoring system. Be deliberate about the responsibilities you assume. Have the courage to betray your idols.
 # Ambition won't make you happy. No matter how interesting the game, sooner or later it will seize to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
 # Guard yourself relentlessly against bitterness and cynicism. Choose a life of service. Stand for something. Find a mission that's meaningful to other people, and pour all of yourself into that mission. If you succeed, at the very least you will have improved people's lives. If you fail or were wrong, you'll find solace in having tried.
 
 <h2 style="margin-left: -8px;"><br />Relationships<br /><br /></h2>
 
-#_ Find the strength to let go of people who make you unhappy. Every minute spent trying to fix relationships that couldn't work is a minute robbed from the people who could love and accept you as you are.
-# Give the people who make you happy unconditional kindness and support. Every minute they choose to spend with you they're giving you a gift, not granting you your due. Be grateful and cultivate the discipline to express this gratitude in your every action.
+#_ Find the strength to let go of people who make you unhappy. Every minute spent trying to fix relationships that don't work is a minute robbed from the people who could love and accept you as you are.
+# Give the people who make you happy unconditional kindness and support. Every minute they choose to spend with you they're giving a gift, not granting you your due. Be grateful and cultivate the discipline to express this gratitude in your every action.
 # Every human being has an inalienable birthright to their own story. Let go of your expectations for other people and don't ever try to coerce anyone to be a particular way. You can only start building meaningful relationships when you accept people exactly as they are.
-# Always be honest, especially when you're afraid. Stop acting. Have the courage to express what's in your heart. Say the words you need to say even when your voice shakes. We are all creatures who meet in boundless infinity for the last time in the world. So drop all pretense and speak with a human voice.
-# Nothing explains humanity like the games we play. We can't help it, so learn to forgive yourself and others.
+# Always be honest, especially when you're afraid. Stop acting. Have the courage to express what's in your heart. Say the words you need to say even when your voice shakes.
 
 <h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
 
@@ -34,7 +33,7 @@ h2. Purpose
 # Time is limited so clear your mind of cant. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics. Focus on what's in front of you.
 # Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
 # Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
-# Play a lot, laugh a lot, and help the people around you play and laugh. We're dancing animals.
+# Nothing explains humanity like the games we play. So play, laugh, forgive, and help the people around you play, laugh, and forgive. We're dancing animals.
 
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
 
