--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -18,27 +18,33 @@ h2. Purpose
 # Ambition won't make you happy. No matter how interesting the game, sooner or later it will seize to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
 # Guard yourself relentlessly against bitterness and cynicism. Choose a life of service. Stand for something. Find a mission that's meaningful to other people, and pour all of yourself into that mission. If you succeed, at the very least you will have improved people's lives. If you fail or were wrong, you'll find solace in having tried.
 
+// TODO: running out of reasons
+// TODO: risk everything
+
 <h2 style="margin-left: -8px;"><br />Relationships<br /><br /></h2>
 
 #_ Find the strength to let go of people who make you unhappy. Every minute spent trying to fix relationships that don't work is a minute robbed from the people who could love and accept you as you are.
 # Give the people who make you happy unconditional kindness and support. Every minute they choose to spend with you they're giving a gift, not granting you your due. Be grateful and cultivate the discipline to express this gratitude in your every action.
 # Every human being has an inalienable birthright to their own story. Let go of your expectations for other people and don't ever try to coerce anyone to be a particular way. You can only start building meaningful relationships when you accept people exactly as they are.
 # Always be honest, especially when you're afraid. Stop acting. Have the courage to express what's in your heart. Say the words you need to say even when your voice shakes.
+# Be earnest. Whoever laughs too much loses respect, and whoever persists in doing something will be known for it.
+# People want to be lead. Find the courage, the humility, and the vision to lead and the world will be at your fingertips.
 
 <h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
 
-#_ Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box of your own creation.
+#_ Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box.
 # Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning.
 # Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. We may be unique, but when you pierce through the arrogance and the noise, we're still animals.
-# Time is limited so clear your mind of cant. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics. Focus on what's in front of you.
+# Time is limited so clear your mind of cant and focus on what's in front of you. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics.
 # Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
 # Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
 # Nothing explains humanity like the games we play. So play, laugh, forgive, and help the people around you play, laugh, and forgive. We're dancing animals.
 
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
 
-#_ Cultivate respect for competence. No U.S. president was an idiot.
-# Let go of opinions, they're probably wrong. Don't make up your mind unless you have to. Use data.
+#_ Work on a problem solvable by you, that many people are willing to pay for, and few people are working on, and your career will take care of itself.
+# Cultivate respect for competence. Odds are, no U.S. president was an idiot. If you find yourself dismissing competence, look in the mirror.
+# Don't commit to an opinion until you have to. Odds are you're probably wrong.
 # Large groups of people are probability distributions. Don't anthropomorphize them.
 # Finding an important problem is 50% of the battle.
 # But don't wait too long. On s’engage et puis... on voit.
