--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -54,5 +54,6 @@ h2. Purpose
 
 #_ Put in the effort to understand Shakespeare. He posed most of the questions worth asking, and found the only answers we're ever going to get.
 # The Economist does a pretty good job covering the rest.
-
+# If you have time left over, read everything.
+# Never dismiss people -- there are lessons all around you. Crystal healing may be bullshit, but speaking to a person who's into crystal healing will teach you a great deal.
 
