--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -17,7 +17,7 @@ h2. Purpose
 # So make your life count. Most things aren't worth fearing. You don't need to be anything, and you don't need to tally your life using anyone else's scoring system. Be deliberate about the responsibilities you assume. Have the courage to betray your idols.
 # Ambition won't make you happy. No matter how interesting the game, sooner or later it will seize to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
 # Guard yourself relentlessly against bitterness and cynicism. Choose a life of service. Stand for something. Find a mission that's meaningful to other people, and pour all of yourself into that mission. If you succeed, at the very least you will have improved people's lives. If you fail or were wrong, you'll find solace in having tried.
-# There will be times when you run out of reasons to do what you're doing. The decisions you make will be the most important in your life.
+# There will be times when you run out of reasons to do what you're doing. The decisions you make in those moments will be the most important in your life.
 # Sometimes you have to roll a hard six.
 
 <h2 style="margin-left: -8px;"><br />Relationships<br /><br /></h2>
@@ -26,7 +26,7 @@ h2. Purpose
 # Give the people who make you happy unconditional kindness and support. Every minute they choose to spend with you they're giving a gift, not granting you your due. Be grateful and cultivate the discipline to express this gratitude in your every action.
 # Every human being has an inalienable birthright to their own story. Let go of your expectations for other people and don't ever try to coerce anyone to be a particular way. You can only start building meaningful relationships when you accept people exactly as they are.
 # Always be honest, especially when you're afraid. Stop acting. Have the courage to express what's in your heart. Say the words you need to say even when your voice shakes.
-# Be earnest. Whoever laughs too much loses respect, and whoever persists in doing something will be known for it.
+# Be earnest. Humor is a spice, not a meal.
 # People want to be lead. Find the courage, the humility, and the vision to lead and the world will be at your fingertips.
 
 <h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
@@ -37,17 +37,18 @@ h2. Purpose
 # Time is limited so clear your mind of cant and focus on what's in front of you. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics.
 # Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
 # Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
-# Nothing explains humanity like the games we play. So play, laugh, forgive, and help the people around you play, laugh, and forgive. We're dancing animals.
+# Forgive everybody, not for their sake, but for your own.
+# Nothing explains humanity like the games we play.
 
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
 
-#_ Work on a problem solvable by you, that many people are willing to pay for, and few people are working on, and your career will take care of itself.
-# Cultivate respect for competence. Odds are, no U.S. president was an idiot. If you find yourself dismissing competence, look in the mirror.
-# Don't commit to an opinion until you have to. Odds are you're probably wrong.
-# Large groups of people are probability distributions. Don't anthropomorphize them.
+#_ Work on a problem you can solve, that many people are willing to pay for, and few people are working on, and your career will take care of itself.
 # Finding an important problem is 50% of the battle.
 # But don't wait too long. On s’engage et puis... on voit.
 # Surrounding yourself with the right people is the other 50%.
+# Cultivate respect for competence. Odds are, no U.S. president was an idiot. If you find yourself dismissing people too often, look in the mirror.
+# Don't commit to an opinion unless you have to. Odds are you're probably wrong.
+# Large groups of people are probability distributions. Don't anthropomorphize them.
 # Don't worry so much. If you see ten problems walking toward you, nine of them will fall into a ditch by the time they get to you.
 
 <h2 style="margin-left: -8px;"><br />Learning<br /><br /></h2>
