--- a/_posts/2016-01-18-betray.textile
+++ b/_posts/2016-01-18-betray.textile
@@ -29,17 +29,6 @@ h2. Purpose
 # Be earnest. Humor is a spice, not a meal.
 # People want to be lead. Find the courage, the humility, and the vision to lead and the world will be at your fingertips.
 
-<h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
-
-#_ Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box.
-# Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning.
-# Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. We may be unique, but when you pierce through the arrogance and the noise, we're still animals.
-# Time is limited so clear your mind of cant and focus on what's in front of you. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics.
-# Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
-# Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
-# Forgive everybody, not for their sake, but for your own.
-# Nothing explains humanity like the games we play.
-
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
 
 #_ Work on a problem you can solve, that many people are willing to pay for, and few people are working on, and your career will take care of itself.
@@ -55,6 +44,17 @@ h2. Purpose
 
 #_ Put in the effort to understand Shakespeare. He posed most of the questions worth asking, and found the only answers we're ever going to get.
 # The Economist does a pretty good job covering the rest.
+# Never dismiss anyone -- there are lessons all around you. Crystal healing may be bullshit, but speaking to a person who's into crystal healing will teach you a great deal.
 # If you have time left over, read everything.
-# Never dismiss people -- there are lessons all around you. Crystal healing may be bullshit, but speaking to a person who's into crystal healing will teach you a great deal.
+
+<h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
+
+#_ Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box.
+# Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning.
+# Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. We may be unique, but when you pierce through the arrogance and the noise, we're still animals.
+# Time is limited so clear your mind of cant and focus on what's in front of you. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics.
+# Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
+# Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
+# Forgive everybody, not for their sake, but for your own.
+# Nothing explains humanity like the games we play.
 
