--- a/_posts/2016-01-25-betray.textile
+++ b/_posts/2016-01-25-betray.textile
@@ -15,7 +15,7 @@ h2. Purpose
 
 # My grandmother is ninety-two. First her world shrunk to her room, then to her bed, then to one side of the bed. Then she forgot the names of her loved ones. Then she stopped recognizing our faces. We accumulate nothing and we die alone.
 # So make your life count. Most things aren't worth fearing. You don't need to be anything, and you don't need to tally your life using anyone else's scoring system. Be deliberate about the responsibilities you assume. Have the courage to betray your idols.
-# Ambition won't make you happy. No matter how interesting the game, sooner or later it will seize to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
+# Ambition alone won't make you happy. No matter how interesting the game, sooner or later it will seize to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
 # Guard yourself relentlessly against bitterness and cynicism. Choose a life of service. Stand for something. Find a mission that's meaningful to other people, and pour all of yourself into that mission. If you succeed, at the very least you will have improved people's lives. If you fail or were wrong, you'll find solace in having tried.
 # There will be times when you run out of reasons to do what you're doing. The decisions you make in those moments will be the most important in your life.
 # Sometimes you have to roll a hard six.
@@ -28,16 +28,19 @@ h2. Purpose
 # Always be honest, especially when you're afraid. Stop acting. Have the courage to express what's in your heart. Say the words you need to say even when your voice shakes.
 # Be earnest. Humor is a spice, not a meal.
 # People want to be lead. Find the courage, the humility, and the vision to lead, and the world will be at your fingertips.
+# But don't be afraid to ask for help and support. Volnurability isn't weakness.
+# Forgive everybody, not for their sake, but for your own.
 
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
 
 #_ Work on a problem you can solve, that many people are willing to pay for, and few people are working on, and your career will take care of itself.
 # Finding an important problem is 50% of the battle.
 # But don't wait too long. On s’engage et puis... on voit.
-# Surrounding yourself with the right people is the other 50%.
-# Cultivate respect for competence. Odds are, no U.S. president was an idiot. If you find yourself dismissing people too often, look in the mirror.
-# Don't commit to an opinion until you have to. Odds are you're probably wrong.
-# But if you must commit, stick to your guns unless there is new evidence. Cultivate strong opinions, weakly held.
+# Surrounding yourself with smart, determined people is the other 50%.
+# Work hard. Try to be the best in the world at something.
+# Cultivate respect for competence. Odds are, no U.S. president was an idiot. If you find yourself criticizing people too often, look in the mirror.
+# Don't commit to an opinion until you have to. Making correct decisions is really hard -- you're probably wrong most of the time.
+# But once it's time to commit, don't look back.
 # Large groups of people are probability distributions. Don't anthropomorphize them.
 # Don't worry so much. If you see ten problems walking toward you, nine of them will fall into a ditch by the time they get to you.
 
@@ -46,16 +49,16 @@ h2. Purpose
 #_ Put in the effort to understand Shakespeare. He posed most of the questions worth asking, and found the only answers we're ever going to get.
 # The Economist does a pretty good job covering the rest.
 # Never dismiss anyone -- there are lessons all around you. Crystal healing may be bullshit, but speaking to a person who's into crystal healing will teach you a great deal.
-# If you have time left over, read everything.
+# Make time to read. Read everything you can get your hands on.
 
 <h2 style="margin-left: -8px;"><br />Moments<br /><br /></h2>
 
 #_ Spend time with people because you enjoy the moments spent in their company, not because you're trying to check an imaginary box.
 # Don't lose yourself in the world of abstractions. Take the time to savor the taste of water, the smell of rain, the sight of friends's faces, the feeling of clothes on your skin, and the sounds of your neighborhood in the morning.
 # Be kind to your body. Pay attention to the changing seasons and the movement of the sun through the sky. We may be unique, but when you pierce through the arrogance and the noise, we're still animals.
-# Time is limited so clear your mind of cant and focus on what's in front of you. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in politics.
+# Time is limited so clear your mind of cant and focus on what's in front of you. Gossip less. Throw out items that don't make you happy. Don't get wrapped up in armchair politics. Simplify your life.
 # Do things with people. Go camping one-on-one with a friend and get to know them better. Travel alone to a new country. Talk to a stranger. Don't measure out your life in coffee spoons. 
 # Live moments with intensity. Allow yourself to be moved to tears by nature, or the beauty of someone's face, or a work of art. Cry in front of others if you feel like crying. Learn not to guard your heart.
-# Forgive everybody, not for their sake, but for your own.
+# Laugh more.
 # Nothing explains humanity like the games we play.
 
