--- a/_posts/2016-01-25-betray.textile
+++ b/_posts/2016-01-25-betray.textile
@@ -15,7 +15,7 @@ h2. Purpose
 
 # My grandmother is ninety-two. First her world shrunk to her room, then to her bed, then to one side of the bed. Then she forgot the names of her loved ones. Then she stopped recognizing our faces. We accumulate nothing and we die alone.
 # So make your life count. Most things aren't worth fearing. You don't need to be anything, and you don't need to tally your life using anyone else's scoring system. Be deliberate about the responsibilities you assume. Have the courage to betray your idols.
-# Ambition alone won't make you happy. No matter how interesting the game, sooner or later it will seize to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
+# Ambition alone won't make you happy. No matter how interesting the game, sooner or later it will cease to be meaningful. If you have nothing else, you'll find yourself in an abyss so deep it may be too late to climb out.
 # Guard yourself relentlessly against bitterness and cynicism. Choose a life of service. Stand for something. Find a mission that's meaningful to other people, and pour all of yourself into that mission. If you succeed, at the very least you will have improved people's lives. If you fail or were wrong, you'll find solace in having tried.
 # There will be times when you run out of reasons to do what you're doing. The decisions you make in those moments will be the most important in your life.
 # Sometimes you have to roll a hard six.
@@ -28,7 +28,7 @@ h2. Purpose
 # Always be honest, especially when you're afraid. Stop acting. Have the courage to express what's in your heart. Say the words you need to say even when your voice shakes.
 # Be earnest. Humor is a spice, not a meal.
 # People want to be lead. Find the courage, the humility, and the vision to lead, and the world will be at your fingertips.
-# But don't be afraid to ask for help and support. Volnurability isn't weakness.
+# But don't be afraid to ask for help and support. Vulnerability isn't weakness.
 # Forgive everybody, not for their sake, but for your own.
 
 <h2 style="margin-left: -8px;"><br />Career<br /><br /></h2>
